--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineup-button{
   padding:5px 12px;
   float:right;
 }
@@ -17,11 +17,28 @@ body, a:link, a:visited, a:active{
   height:32px;
   background-color: #555;
 }
+
 .title{
   background-color: #777;
 }
+
 .dancer{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+.tipsy-dancer{
+  border:15px solid blue;
+  border-radius:15px;
+}
+
+.inflated-dancer {
+  border: 50px solid green;
+  border-radius: 50px;
+}
+
+.deflated-dancer {
+  border: 5px solid green;
+  border-radius: 5px;
 }
