--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-image: url('https://s-media-cache-ak0.pinimg.com/originals/ee/66/d1/ee66d158a7e5105b870c0e1d504933de.jpg');
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -28,6 +29,14 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 
+.dancer p {
+  display: none;
+}
+
+.dancer:hover {
+  border-radius: 0px;
+}
+
 .tipsy-dancer{
   border:15px solid blue;
   border-radius:15px;
@@ -41,4 +50,9 @@ body, a:link, a:visited, a:active{
 .deflated-dancer {
   border: 5px solid green;
   border-radius: 5px;
+}
+
+.orbital-dancer {
+  border: 25px solid yellow;
+  border-radius: 25px;
 }
